push mega meget

--- a/src/abonnement1.html
+++ b/src/abonnement1.html
@@ -70,7 +70,7 @@
         width: 60px;
         height: 0px;
         border: solid 2px var(--color-abonnement-bar-disabled);
-        margin-left: -3px;
+        margin-left: -0.5px;
       }
 
       @media (min-width: 900px) {
@@ -111,7 +111,7 @@
     <a href="abonnement.html">tilbage</a>
     <header class="mb-10 bg-rust-400 font-medium text-color-black">
       <div
-        class="grid gap-0.5 py-1 text-center font-font-body text-abonnement-text-info"
+        class="grid gap-0.5 py-1 text-center font-font-body text-abonnement-text-info lg:flex lg:place-content-evenly lg:text-body-mobile"
       >
         <p>Køb dine blomster i vores butikker</p>
         <p>Bestil dit abonnement på vores webshop</p>
@@ -179,7 +179,7 @@
           Hvilken størrelse buket ønsker du?
         </h1>
         <p
-          class="mx-auto py-l-spacing-mobile text-left font-font-body text-body-mobile lg:w-1/2 lg:py-l-spacing-desktop lg:text-body-desktop"
+          class="mx-auto w-11/12 py-l-spacing-mobile text-left font-font-body text-body-mobile lg:w-2/3 lg:py-l-spacing-desktop lg:text-body-desktop"
         >
           Du kan vælge mellem 4 forskellige størrelser af buket; mini, lille,
           mellem og stor. Størrelsen har ingen påvirkning på designet af
@@ -189,7 +189,7 @@
 
       <!---------------------------------------------- ANDEN SEKTION -->
       <section
-        class="flex flex-wrap gap-l-spacing-mobile pb-l-spacing-mobile lg:pb-l-spacing-desktop"
+        class="flex flex-wrap justify-center gap-l-spacing-mobile pb-l-spacing-mobile lg:pb-l-spacing-desktop"
       >
         <!-- CARD 1 -->
         <article
