--- a/src/abonnement2.html
+++ b/src/abonnement2.html
@@ -70,7 +70,7 @@
         width: 60px;
         height: 0px;
         border: solid 2px var(--color-abonnement-bar-disabled);
-        margin-left: -3px;
+        margin-left: -0.5px;
       }
 
       .line1 {
@@ -183,30 +183,27 @@
       </section>
       <!-- PROGRESS BAR SLUT -->
       <!---------------------------------------------- FØRSTE SEKTION -->
-      <section class="mx-auto grid text-center lg:w-2/3">
+      <section class="mx-auto grid text-center">
         <h1 class="font-main-heading text-h1-mobile lg:text-h1-desktop">
           Hvilken stil skal din buket have?
         </h1>
-        <article
-          class="mx-auto py-l-spacing-mobile text-left font-font-body text-body-mobile"
+
+        <p
+          class="mx-auto w-11/12 py-l-spacing-mobile text-left font-font-body text-body-mobile lg:w-2/3 lg:py-l-spacing-desktop lg:text-body-desktop"
         >
-          <h2 class="">
-            Vælg mellem 2 forskellige farvesammensætninger af din buket, så du
-            kan få det tilpasset det til din stil!
-          </h2>
-          <h2 class="">
-            Du kan desuden også vælge om din buket skal være tæt eller luftig,
-            og derved gøre den endnu mere personlig.
-          </h2>
-        </article>
+          Vælg mellem 2 forskellige farvesammensætninger af din buket, så du kan
+          få det tilpasset det til din stil! Du kan desuden også vælge om din
+          buket skal være tæt eller luftig, og derved gøre den endnu mere
+          personlig.
+        </p>
       </section>
 
       <!---------------------------------------------- ANDEN SEKTION -->
       <div class="lg:flex lg:gap-xxxl-spacing-desktop lg:pb-l-spacing-desktop">
         <div class="lg:grid">
-          <h3 class="pb-s-spacing-mobile font-other-headings text-h5-mobile">
+          <h2 class="pb-s-spacing-mobile font-other-headings text-h5-mobile">
             Vælg farvesammensætning
-          </h3>
+          </h2>
           <section
             class="flex flex-wrap gap-l-spacing-mobile pb-l-spacing-mobile lg:gap-xxs-spacing-mobile"
           >
